# PetCare

./: CONTRIBUTING.md  LICENSE  PetCare.pptx  readme.md
codes/: CMakeLists.txt  main.cpp  main_ask_data.cpp
codes/lib/: IOTConnect.cpp  IOTConnect.h  SmartPet.cpp  SmartPet.h  motor.cpp  motor.h  sonic.cpp  sonic.h  water.cpp  water.h  weight.cpp  weight.h
codes/src/: CMakeLists.txt  main.cpp
codes/test/iot_test/: CMakeLists.txt  main.cpp  reademe.txt
codes/test/iot_test/lib/: SmartPet.cpp  SmartPet.h
codes/test/iot_test/src/: CMakeLists.txt
codes/test/iot_test2/: CMakeLists.txt
codes/test/iot_test2/lib/: SmartPet.cpp  SmartPet.h
codes/test/iot_test2/src/: main.cpp
codes/test/motor_test/: CMakeLists.txt  motor.cpp  motor_test
codes/test/motor_test/lib/: MotorController.h  motor.cpp  sonic.cpp
codes/test/motor_test/src/: CMakeLists.txt  main.cpp
codes/test/sonic_test/: CMakeLists.txt  main.cpp  sonic.cpp  sonic.h
codes/test/sonic_test/src/: CMakeLists.txt  main.cpp
codes/test/water_test/: CMakeLists.txt  water  water.cpp  water_test
codes/test/water_test/lib/: water.cpp  water.h
codes/test/water_test/src/: CMakeLists.txt  main.cpp
codes/test/weight_test/: CMakeLists.txt  main.cpp
codes/test/weight_test/calibration_code/: weight_calibration  weight_calibration.cpp
codes/test/weight_test/lib/: weight.cpp  weight.h
codes/test/weight_test/src/: main.cpp
codes/test/weight_test/test_code/: CMakeLists.txt  weight_main.cpp  weight_test
codes/test/weight_test/test_code/lib/: weight1.cpp  weight1.h  weightmain.cpp
docs/uml/: Doxyfile  main.cpp  motor.cpp  sonic.cpp  water.cpp  weight.cpp
docs/uml/html/: annotated.html  class_motor_controller-members.html  class_motor_controller.html  class_motor_controller__coll__graph.map  class_motor_controller__coll__graph.md5  class_ultrasonic_sensor-members.html  class_ultrasonic_sensor.html  class_ultrasonic_sensor__coll__graph.map  class_ultrasonic_sensor__coll__graph.md5  class_water_level_controller-members.html  class_water_level_controller.html  class_water_level_controller__coll__graph.map  class_water_level_controller__coll__graph.md5  class_weight_sensor-members.html  class_weight_sensor.html  class_weight_sensor__coll__graph.map  class_weight_sensor__coll__graph.md5  classes.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5
docs/uml/html/search/: all_0.js  all_1.js  all_3.js  all_7.js  all_9.js  classes_0.js  classes_2.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_0.js  variables_1.js
libpigpio/: CMakeLists.txt  main.cpp
libpigpio/lib/: SmartPet.cpp  SmartPet.h  motor.cpp  motor.h  sonic.cpp  sonic.h
libpigpio/test/motor_test/: motor.cpp  motor.h  motor_main.cpp
libpigpio/test/sonic_test/: sonic.h  sonic_main.cpp  sonic_test
libpigpio/test/weight_test/test_code/: weight.cpp  weight.h
test/motor_test/: motor.h
test/sonic_test/: sonic_test
